<resources>
    <string name="app_name">ajoloferiaxml</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Correo invalido</string>
    <string name="invalid_password">Contraseña mayor a 8 caracteres</string>
    <string name="match_password">Passwords dont match </string>

    <string name="login_failed">"Login failed"</string>
    <string name="button_top_stall">Popular</string>
    <string name="button_all_stall">All</string>
    <string name="item_stall_name">Name</string>
    <string name="item_stall_price">$$$</string>
    <string name="item_stall_stars">4.5</string>
    <string name="item_stall_description">asdfgasdghsadhadgadfgadsgadsfgadfshahadfhadfhadfhadfjadfhjadfjadfhjadfjadfjhadfhadfhadhadfhadfhdafhgadfhahadfhadfhadfhadfghda</string>
    <string name="title_more">"More"</string>
    <string name="shopping">"Shopping"</string>
    <string name="atractions">"Atraccions"</string>
    <string name="management">"Management"</string>
    <string name="admin">"Admin panel"</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_qr">QR</string>
    <string name="title_fav">Favorites</string>
    <string name="title_moreUser">More</string>
    <string name="todo">TODO</string>
    <string name="footer">Footer</string>
    <string name="user_name_template">user_name</string>
    <string name="reviews">Reviews</string>
    <string name="buy_ajolocoins">Buy AjoloCoins</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="history">Shopping history</string>
    <string name="card">Credit or Debit card</string>
    <string name="cash">Cash</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment">Payment</string>
    <string name="employees">Employees</string>
    <string name="new_employee">New Employee</string>
    <string name="register_new_employee">Register new employee</string>
    <string name="n_mero_de_tarjeta">Número de tarjeta</string>
    <string name="CardTitle">Tarjeta de Crédito o Debito</string>
    <string name="suport">If you have any questions or need help with a problem, you can call us at any of the following numbers, or contact us through our social networks.</string>
    <string name="numbers">Phone numbers:\n</string>
    <string name="more">More</string>
    <string name="moreExplained">Change the language of the application without having to restart it</string>
    <string name="options">Options:</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="welcomeMessage">"Hi, "</string>
    <string name="myqrExplained">Use it to identify yourself at the stalls or to buy ajolocoins at the ticket office\n</string>
    <string name="add_employeeBtn">Add employee</string>
    <string name="update_user">Update user</string>
    <string name="status_valid">Valid</string>
    <string name="status_invalid">Invalid</string>
    <string name="tv_cvv_instruction">Provide the CVV Code</string>
</resources>