<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/schedule_24"
        android:title="@string/title_schedule" />
    <item
        android:id="@+id/placeholder"
        android:title=""/>
    <item
        android:id="@+id/navigation_fav"
        android:icon="@drawable/fav_24"
        android:title="@string/title_qr" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/more_24"
        android:title="@string/title_more" />

</menu>