<!-- res/layout/fragment_language_user.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/languageTV"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="50sp"
        />

    <TextView
        android:textColor="@color/gray_2"
        android:id="@+id/languageTVSupport"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moreExplained"
        android:textSize="15sp"
        />

    <TextView
        android:layout_marginTop="35dp"
        android:textColor="@color/gray_2"
        android:id="@+id/languageOptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageTVSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:textSize="20sp"
        />


    <Button
        android:backgroundTint="@color/color_dark"
        android:id="@+id/resetToDefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/languageOptions"
        android:text="@string/english" />
    <Button
        android:id="@+id/changeSpanish"
        android:backgroundTint="@color/color_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetToDefaultButton"
        android:layout_marginTop="5dp"
        android:text="@string/spanish" />

</androidx.constraintlayout.widget.ConstraintLayout>
