<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    android:layout_gravity="top"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/img_up_login"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/item_stall_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_stall_price"
                android:textColor="@color/color_secundary"
                android:textStyle="bold"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintEnd_toStartOf="@id/stars_label"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/stars_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_stall_stars"
                android:textColor="#FFC107"
                android:textStyle="bold"
                android:layout_marginHorizontal="5dp"
                app:layout_constraintEnd_toStartOf="@id/starts_icon"
                app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                android:id="@+id/starts_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/star_fill"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/favorite_icon"/>
            <ImageButton
                android:id="@+id/favorite_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/favorite"
                android:background="#00FFFFFF"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_stall_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>