<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.more_user.MoreUserFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/user_profile_img"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="25dp"
                />

            <TextView
                android:id="@+id/user_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_profile_img"
                android:text="Hola"
                android:gravity="center"
                android:textSize="25dp"/>

            <LinearLayout
                android:layout_marginTop="50dp"
                android:id="@+id/lineaLayoutReviews"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                app:layout_constraintTop_toBottomOf="@id/user_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/moreReview"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/star"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    android:textSize="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:id="@+id/lineaLayoutGetCoins"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                app:layout_constraintTop_toBottomOf="@id/lineaLayoutReviews"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/moreCoins"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/shop_car"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buy_ajolocoins"
                    android:textSize="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:id="@+id/lineaLayoutHistoryBuys"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                app:layout_constraintTop_toBottomOf="@id/lineaLayoutGetCoins"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/moreHistory"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/history_buys"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textSize="20dp"/>

            </LinearLayout>

            <View
                android:id="@+id/separator"
                android:layout_marginTop="25dp"
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/lineaLayoutHistoryBuys"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <LinearLayout
                android:layout_marginTop="25dp"
                android:id="@+id/lineaLayoutSettingsUser"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                app:layout_constraintTop_toBottomOf="@id/separator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/moreSettingsUser"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/settings"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textSize="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:id="@+id/lineaLayoutLanguajeUser"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                app:layout_constraintTop_toBottomOf="@id/lineaLayoutSettingsUser"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/moreLanguajeUser"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/languaje_change"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textSize="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:id="@+id/lineaLayoutSupportUser"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                app:layout_constraintTop_toBottomOf="@id/lineaLayoutLanguajeUser"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/moreSupportUser"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/support"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support"
                    android:textSize="20dp"/>

            </LinearLayout>

            <View
                android:id="@+id/separator2"
                android:layout_marginTop="25dp"
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/lineaLayoutSupportUser"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <LinearLayout
                android:layout_marginTop="50dp"
                android:id="@+id/lineaLayoutLogoutUser"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                app:layout_constraintTop_toBottomOf="@id/separator2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="right"
                android:layout_marginEnd="100dp">

                <ImageView
                    android:layout_marginTop="5dp"
                    android:id="@+id/logoutIconUser"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logout"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/logoutButtonUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:clickable="true"
                    android:text="@string/logout"
                    android:textSize="20dp"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="260dp"
                app:layout_constraintTop_toBottomOf="@id/lineaLayoutLogoutUser"
                android:background="@android:color/transparent"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>